alignment fix to documents dev page
Former-commit-id: 2ec4fa369f3265bab1bb7d8bc031f59db10528b5

--- a/css/styles.css
+++ b/css/styles.css
@@ -1490,7 +1490,7 @@ Documents Page Styles
 	margin-bottom:20px;
 }
 
-.doc-box-examples {min-height:230px}
+.doc-box-dev-wiki { clear:both;}
 
 .doc-box-examples h2,
 .doc-box-system-docs h2,
